# NTU-AAI-CA6125-CourseWork-Group16

./: .gitignore  DEPLOY_ALIYUN.md  Dockerfile  Group16_video.txt  README.md  docker-compose.yml  local training_essay_scoring_m_chip.ipynb  pyproject.toml  requirements-web.txt  requirements.txt
LLM experiments/: kaggle inference_group-16.ipynb
RAG experiments/: kaggle inference_rag_group-16.ipynb
configs/: baseline.yaml  experiments.yaml  transformer.yaml
experiments/artifacts/: baseline_metrics.json  baseline_predictions.json  data_audit.json  enhanced_metrics.json  ensemble_oof.npy  ensemble_test.npy  error_analysis.json  final_selection.json  llm_rag_metrics.json  transformer_metrics.json
experiments/submissions/: submission_lgbm_svd.csv  submission_lgbm_text_features.csv  submission_ridge_fused.csv  submission_ridge_per_target.csv  submission_ridge_tfidf.csv  submission_stacked_ensemble.csv  submission_svr_tfidf.csv
notebooks/: Group16_inference.ipynb
reports/: Group16_report_en.md  Group16_report_zh.md  GroupXX_report_en.md  GroupXX_report_zh.md  compliance_checklist.md  team_message_en.md  video_demo_flow_zh.md  video_script_en.md
scripts/: audit_data.py  build_reports.py  create_demo_data.py  download_data.py  make_submission.py  run_baselines.py  run_enhanced.py  smoke_test.py  train_transformer.py
src/feedback_ell/: __init__.py  baseline.py  constants.py  data.py  enhanced.py  features.py  kaggle_io.py  metrics.py  reporting.py  submission.py  team.py  transformer_model.py  utils.py
tests/: test_metrics.py
web/: app.py
web/static/: app.js  (+2 more)
